style.less
/* ... */
.monospace(){
	font-family: var(--editor-font-family);
}
.text-font(){
	font-family: @font-text;
}
.font-size-scale(@percentage) {
	@number-percentage: (unit(@percentage) / 100);
	font-size:~"calc(var(--editor-font-size) * @{number-percentage})"
}
.bold{
	font-weight: bold;
}
.italic{
	font-style: italic;
}
.underline{
	text-decoration: underline;
}
.strikethrough{
	& > .syntax--punctuation{
		&:first-child, &:last-child{
			visibility:hidden;
		}
	}
	position:relative;

	&::before{
		content: "";
		width: 100%;
		height: 1px;
		background: @markdown-color-text;
		position: absolute;
		top: 50%;
		//transform:translate(0,-50%);
		left: 0;
	}
}

.block{
	&::after{
		content:"";
		position:absolute;
		left:0;
		width:100%;
		height:@line-height-px;
		background-color:@markdown-color-block-background;
	}
}

.for (@list, @code) {
	& {
		.loop(@i:1) when (@i =< length(@list)) {
			@value: extract(@list, @i);
			@code();
			.loop(@i + 1);
		}
		.loop();
	}
}

:root{
}

// Markdown
span when(@markdown){
	.syntax--markup, .syntax--md{
		& when(@markdown-font-always-monospace = false){
			.text-font
		}
		color: @markdown-color-text;
		&.syntax--raw when(@markdown-inline-code){
			.markdown-inline-code-style;
		}
		&.syntax--link when(@markdown-links){
			&.syntax--text{
				color: @markdown-color-links;
				.markdown-link-text;
			}
			&.syntax--underline{
				color: @markdown-color-links;
				.markdown-link-url;
			}
			&.syntax--title{
				color: @markdown-color-text;
				.markdown-link-title;
			}
		}
		&.syntax--punctuation{
			.monospace;
		}
		& when(@markdown-headings){
			&.syntax--heading-1{
				.markdown-heading-1
			}
			&.syntax--heading-2{
				.markdown-heading-2
			}
			&.syntax--heading-3{
				.markdown-heading-3
			}
			&.syntax--heading-4{
				.markdown-heading-4
			}
			&.syntax--heading-5{
				.markdown-heading-5
			}
			&.syntax--heading-6{
				.markdown-heading-6
			}
		}
		& > .trailing-whitespace{
			visibility:visible;
			.monospace;
		}
		&.syntax--quote, &.syntax--bold, &.syntax--italic, &.syntax--list{
			color: @markdown-color-text;
		}
		& when(@markdown-text-styles){
			&.syntax--bold{
				.markdown-text-style-bold;
			}
			&.syntax--italic{
				.markdown-text-style-italic;
			}
			&.syntax--strike{
				.markdown-text-style-strikethrough;
			}
		}
		& when(@markdown-list){
			&.syntax--list > .syntax--punctuation{
				&::before{
					visibility: visible;
					.monospace;
					content: "  ";
				}
			}
			&.syntax--list.syntax--unordered > .syntax--punctuation when(@markdown-list-bullet){
				visibility:hidden;
				@bullets: length(@markdown-list-bullets);
				.for(@markdown-list-bullets, {
					&:nth-child(@{bullets}n+@{i})::before{
						content: "  @{value}";
					}
				});
			}
		}
		&.syntax--fenced, &.syntax--table{
			.monospace;
		}
		&.syntax--table when(@markdown-tables){
			&.syntax--table when(@markdown-table-background){
				.block
			}
			& when(@markdown-lines) and(@markdown-table-lines){
				& > .syntax--horizontal when(@markdown-table-lines-horizontal){
					visibility:hidden;
					&::after{
							visibility:visible;
							content:"";
							border-bottom: 3px solid @markdown-color-block-background;
							box-sizing:content-box;
							position:absolute;
							left:0;
							width:100%;
							height:@line-height-px;
							transform:translate(0,-50%);
					}
				}
				& > .syntax--vertical when(@markdown-table-lines-vertical){
					visibility:hidden;
					&:before{
						visibility:visible;
						content:"";
						position:absolute;
						width:3px;
						height:@line-height-px;
						background-color:@markdown-color-line;
					}
				}
			}
		}
		& when(@markdown-block-code){
			&.syntax--fenced > .syntax--language{
				.markdown-block-code-language-name;
			}
			&.syntax--fenced when(@markdown-block-code-background){
				.block
			}
		}
		& when(@markdown-quote){
			&.syntax--quote when(@markdown-quote-background){
				.block
			}
			&.syntax--quote when(@markdown-lines) and(@markdown-quote-lines){
				&::after{
					border-left: @markdown-line-width solid @markdown-color-solid-line;
				}
				& > .syntax--punctuation:first-child{
					visibility:hidden;
					&:before{
						visibility:visible;
						content:"";
						position:absolute;
						width:@markdown-line-width;
						height:@line-height-px;
						background-color:@markdown-color-line;
					}
				}
			}
		}
		&.syntax--hr when(@markdown-lines) and(@markdown-horizontal-lines){
			visibility:hidden;
			&::after{
				visibility:visible;
				content:"";
				border-bottom: @markdown-line-width @markdown-horizontal-line-style @markdown-color-block-background;
				box-sizing:content-box;
				position:absolute;
				left:0;
				width:100%;
				height:@line-height-px;
				transform:translate(0,-50%);
			}
		}
		& > .indent-guide:before when(@markdown-indent-guide = false){
			display:none;
		}
		&:not(.syntax--list) > .indent-guide when(@markdown-indent-guide = false){
			visibility:visible !important;
			.monospace;
		}
		& > .trailing-whitespace{
			visibility: visible !important;
			.monospace;
		}
		& > .syntax--html {
			.monospace;
		}
	}

}
span when(@invisible-characters = false){
	.invisible-character{
		visibility:hidden
	}
	.invisible-character.indent-guide{
		visibility:visible;
	}
	.invisible-character.trailing-whitespace{
		visibility:hidden;
	}
}
span when (@indent-guide) {
	.invisible-character.indent-guide{
		visibility:hidden;
	}
	.indent-guide{
		box-shadow:none !important;
		visibility:hidden;
	}
	.indent-guide:not(.eol):not(.trailing-whitespace) {
		&::before{
			content:" ";
			position:absolute;
			border-left: 1px solid @indent-guide-color-soft-tab;
			visibility:visible;
			transform: translate(50%);
		}
		&.hard-tab::before{
			transform: translate( @indent-guide-hard-tab-position );
			border-left: 1px solid @indent-guide-color-hard-tab;
		}
		&:not(.hard-tab)::before when (@indent-guide-hard-tab-only){
			visibility:hidden !important;
		}
	}
}
/* ... */

